package linnik;

public class Plane1 {
}
