package linnik;

public class Plane2 {
}
