@startuml

title __LINNIK_LR51's Class Diagram__\n

  namespace linnik {
    class linnik.Main {
    }
  }
  

  namespace linnik {
    class linnik.Plane1 {
    }
  }
  

  namespace linnik {
    class linnik.Plane1Factory {
    }
  }
  

  namespace linnik {
    class linnik.Plane2 {
    }
  }
  

  namespace linnik {
    class linnik.Plane2Factory {
    }
  }
  

  namespace linnik {
    class linnik.PlaneCorpuse1 {
    }
  }
  

  namespace linnik {
    class linnik.PlaneCorpuse2 {
    }
  }
  

  namespace linnik {
    class linnik.PlaneCorpuse3 {
    }
  }
  

  namespace linnik {
    class linnik.PlaneCorpuse4 {
    }
  }
  

  namespace linnik {
    interface linnik.PlanesFactory {
    }
  }
  

  linnik.Plane1Factory .up.|> linnik.PlanesFactory
  linnik.Plane2Factory .up.|> linnik.PlanesFactory
  linnik.PlaneCorpuse1 -up-|> linnik.Plane1
  linnik.PlaneCorpuse2 -up-|> linnik.Plane2
  linnik.PlaneCorpuse3 -up-|> linnik.Plane1
  linnik.PlaneCorpuse4 -up-|> linnik.Plane2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
